--- a/extension - Copy/manifest.json
+++ b/extension - Copy/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Video Speed Up",
   "description": "Speeds up videos playback with single click. Affects html5 videos and audio.",
-  "version": "1",
+  "version": "1.1",
   "author": "conrad.rzuc@gmail.com",
   "background": {
     "scripts": [
@@ -16,6 +16,11 @@
         "https://*/*",
         "file:///*/*"
       ],
+	  "exclude_matches": [
+        "https://plus.google.com/hangouts/*",
+        "https://hangouts.google.com/*",
+        "https://meet.google.com/*"
+      ],
       "js": [
         "VSUScript.js"
       ],
@@ -28,7 +33,8 @@
     "<all_urls>",
     "http://*/*",
     "https://*/*",
-    "file:///*/*"
+    "file:///*/*",
+	"webNavigation"
   ],
   "browser_action": {
     "default_icon": "icon19.png"
@@ -40,10 +46,9 @@
     "64": "icon64.png",
     "128": "icon128.png"
   },
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
-      "id": "{1a4bd89e-02af-49a7-b6d5-aad47d4c0bcc}",
-      "strict_min_version": "42.0"
+      "strict_min_version": "48.0"
     }
   },
   "commands": {
