--- a/extension - Copy/manifest.json
+++ b/extension - Copy/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Video Speed Up",
-  "description": "Speeds up videos playback with single click. Affects html5 videos and audio.",
-  "version": "1.1",
+  "description": "Speeds up videos playback. Affects html5 videos and audio.",
+  "version": "1.3",
   "author": "conrad.rzuc@gmail.com",
   "background": {
     "scripts": [
