--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Audio/Video Speed Up",
+  "version": "1.3",
   "description": "Speeds up playback. Affects all html5 videos and audio.",
   "icons": {
     "128": "icon128.png"
@@ -8,8 +9,10 @@
   "browser_action": {
     "default_icon": "icon128.png"
   },
-  "version": "1.3",
-  "author": "conrad.rzuc@gmail.com",
+  "developer": {
+    "name": "conrad.rzuc@gmail.com",
+    "url": "https://github.com/conradOU/"
+  },
   "background": {
     "scripts": [
       "background.js"
@@ -45,13 +48,15 @@
   "commands": {
     "video-speed-up": {
       "suggested_key": {
-        "default": "Ctrl+Shift+U"
+        "default": "Ctrl+Shift+U",
+        "mac": "Command+Shift+U"
       },
       "description": "Speed up a video, any video"
     },
     "video-speed-down": {
       "suggested_key": {
-        "default": "Ctrl+Shift+Y"
+        "default": "Ctrl+Shift+Y",
+        "mac": "Command+Shift+Y"
       },
       "description": "Speed down a video, any video"
     }
